[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tstoy"
version = "0.1.0"
description = "A command-line interface application built with Click"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "jsonschema>=4.24.0",
    "pyinstaller>=6.13.0",
]

[project.scripts]
tstoy = "main:main"

[tool.setuptools]
packages = ["commands", "core", "resources", "utils"]
